added chapter about PC priors

--- a/references.bib
+++ b/references.bib
@@ -52,3 +52,21 @@
   year={2019},
   publisher={CRC Press}
 }
+
+@article{sorbye2017penalised,
+  title={Penalised complexity priors for stationary autoregressive processes},
+  author={S{\o}rbye, Sigrunn Holbek and Rue, H{\aa}vard},
+  journal={Journal of Time Series Analysis},
+  volume={38},
+  number={6},
+  pages={923--935},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@book{rue2005gaussian,
+  title={Gaussian Markov random fields: theory and applications},
+  author={Rue, Havard and Held, Leonhard},
+  year={2005},
+  publisher={CRC press}
+}
