--- a/references.bib
+++ b/references.bib
@@ -70,3 +70,10 @@
   year={2005},
   publisher={CRC press}
 }
+
+@book{lovelace2019geocomputation,
+  title={Geocomputation with R},
+  author={Lovelace, Robin and Nowosad, Jakub and Muenchow, Jannes},
+  year={2019},
+  publisher={CRC Press}
+}
