--- a/references.bib
+++ b/references.bib
@@ -77,3 +77,45 @@
   year={2019},
   publisher={CRC Press}
 }
+
+@book{last2017lectures,
+  title={Lectures on the Poisson process},
+  author={Last, G{\"u}nter and Penrose, Mathew},
+  volume={7},
+  year={2017},
+  publisher={Cambridge University Press}
+}
+
+@article{besag1991bayesian,
+  title={Bayesian image restoration, with two applications in spatial statistics},
+  author={Besag, Julian and York, Jeremy and Molli{\'e}, Annie},
+  journal={Annals of the institute of statistical mathematics},
+  volume={43},
+  number={1},
+  pages={1--20},
+  year={1991},
+  publisher={Springer}
+}
+
+@article{bernardinelli1995bayesian,
+  title={Bayesian analysis of space—time variation in disease risk},
+  author={Bernardinelli, Luisa and Clayton, D and Pascutto, Cristiana and Montomoli, Chiara and Ghislandi, Mauro and Songini, Marco},
+  journal={Statistics in medicine},
+  volume={14},
+  number={21-22},
+  pages={2433--2443},
+  year={1995},
+  publisher={Wiley Online Library}
+}
+
+@article{knorr2000bayesian,
+  title={Bayesian modelling of inseparable space-time variation in disease risk},
+  author={Knorr-Held, Leonhard},
+  journal={Statistics in medicine},
+  volume={19},
+  number={17-18},
+  pages={2555--2567},
+  year={2000},
+  publisher={Wiley Online Library}
+}
+
