--- a/chapter-coronavirus.tex
+++ b/chapter-coronavirus.tex
@@ -3,5 +3,5 @@
 \chapter{Corona Virus}
 \label{sec:corona}
 
-\cleanchapterquote{Users do not care about what is inside the box, as long as the box does what they need done.}{Jef Raskin}{about Human Computer Interfaces}
+%\cleanchapterquote{Users do not care about what is inside the box, as long as the box does what they need done.}{Jef Raskin}{about Human Computer Interfaces}
 
