Updates from Overleaf

--- a/bib-refs.bib
+++ b/bib-refs.bib
@@ -119,3 +119,62 @@
   publisher={Wiley Online Library}
 }
 
+@misc{fhi,
+  author = {{Norwegian Institute of Public Health}},
+  title = {Daily report and statistics about coronavirus and COVID-19 },
+  howpublished = "\url{https://www.fhi.no/en/id/infectious-diseases/coronavirus/daily-reports/daily-reports-COVID19/}",
+  year = {2020}, 
+  note = "[Online; accessed 25-January-2021]"
+}
+
+@misc{rki,
+  author = {{Robert Koch Institut}},
+  title = {Aktueller Lage-/Situationsbericht des RKI zu COVID-19},
+  howpublished = "\url{https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Situationsberichte/Gesamt.html}",
+  year = {2020}, 
+  note = "[Online; accessed 25-January-2021]"
+}
+
+@misc{geonorge,
+  author = {{Geonorge}},
+  title = {Kartkatalogen},
+  howpublished = "\url{https://kartkatalog.geonorge.no/?theme=Basis\%20geodata}",
+  year = {2020}, 
+  note = "[Online; accessed 25-January-2021]"
+}
+
+@misc{opendata,
+  author = {{Esri Deutschland}},
+  title = {Kreisgrenzen 2017},
+  howpublished = "\url{https://opendata-esri-de.opendata.arcgis.com/datasets/affd8ace4c204981b5d32070f9547eb9_0}",
+  year = {2020}, 
+  note = "[Online; accessed 25-January-2021]"
+}
+
+@misc{google_mobility,
+  author = {{Google.com}},
+  title = {COVID-19 Community Mobility Reports},
+  howpublished = "\url{https://www.google.com/covid19/mobility/}",
+  year = {2020}, 
+  note = "[Online; accessed 25-January-2021]"
+}
+
+ @misc{OpenStreetMap,
+   author = {{OpenStreetMap contributors}},
+   title = {{Planet dump retrieved from https://planet.osm.org }},
+   howpublished = "\url{ https://www.openstreetmap.org }",
+   year = {2017},
+ }
+ 
+ @Article{osmdata,
+    title = {osmdata},
+    author = {Mark Padgham and Bob Rudis and Robin Lovelace and Maëlle Salmon},
+    journal = {The Journal of Open Source Software},
+    year = {2017},
+    volume = {2},
+    number = {14},
+    month = {jun},
+    publisher = {The Open Journal},
+    url = {https://doi.org/10.21105/joss.00305},
+    doi = {10.21105/joss.00305},
+  }
