--- a/my-thesis-setup.tex
+++ b/my-thesis-setup.tex
@@ -11,30 +11,19 @@
 % **************************************************
 % Information and Commands for Reuse
 % **************************************************
-\newcommand{\thesisTitle}{The Clean Thesis Style}
-\newcommand{\thesisName}{Ricardo Langner}
+\newcommand{\thesisTitle}{WORKING TITLE}
+\newcommand{\thesisName}{Nico Hahn}
 \newcommand{\thesisSubject}{Documentation}
-\newcommand{\thesisDate}{June 21, 2016}
+\newcommand{\thesisDate}{November 15, 2021}
 \newcommand{\thesisVersion}{My First Draft}
 
-\newcommand{\thesisFirstReviewer}{Jane Doe}
-\newcommand{\thesisFirstReviewerUniversity}{\protect{Clean Thesis Style University}}
-\newcommand{\thesisFirstReviewerDepartment}{Department of Clean Thesis Style}
+\newcommand{\thesisFirstReviewer}{Sigrunn Holbek Sørbye}
+\newcommand{\thesisFirstReviewerUniversity}{\protect{University of Tromsø}}
+\newcommand{\thesisFirstReviewerDepartment}{Department of Mathematics and Statistics}
 
-\newcommand{\thesisSecondReviewer}{John Doe}
-\newcommand{\thesisSecondReviewerUniversity}{\protect{Clean Thesis Style University}}
-\newcommand{\thesisSecondReviewerDepartment}{Department of Clean Thesis Style}
-
-\newcommand{\thesisFirstSupervisor}{Jane Doe}
-\newcommand{\thesisSecondSupervisor}{John Smith}
-
-\newcommand{\thesisUniversity}{\protect{Clean Thesis Style University}}
-\newcommand{\thesisUniversityDepartment}{Department of Clean Thesis Style}
-\newcommand{\thesisUniversityInstitute}{Institute for Clean Thesis Dev}
-\newcommand{\thesisUniversityGroup}{Clean Thesis Group (CTG)}
-\newcommand{\thesisUniversityCity}{City}
-\newcommand{\thesisUniversityStreetAddress}{Street address}
-\newcommand{\thesisUniversityPostalCode}{Postal Code}
+\newcommand{\thesisUniversity}{\protect{University of Tromsø}}
+\newcommand{\thesisUniversityDepartment}{Department of Mathematics and Statistics}
+\newcommand{\thesisUniversityGroup}{Statistics and Data Analysis}
 
 
 % **************************************************
